@@ -26,5 +26,4 @@ etsf_io_low_level.o: etsf_io_low_level.f90 \
 	write_routines.f90 \
 	write_routines_auto.f90
 
-etsf_io_low_level.@MODULE_EXT@ ETSF_IO_LOW_LEVEL.@MODULE_EXT@:
-	etsf_io_low_level.o
+etsf_io_low_level.@MODULE_EXT@ ETSF_IO_LOW_LEVEL.@MODULE_EXT@: etsf_io_low_level.o
