@@ -1,3 +1,13 @@
+* Fri Mar 09 2007 Damien Caliste <damien.caliste@cea.fr> 0.8
+- add two more tutorials, one on the split usage and one on the high level routines.
+- improve the documentation, especially the non robodoc pages.
+- create a high level routine to check the validity of a file on the big domains
+  the specifications deal with.
+- create a high level routine to get the names of chemical species following the
+  recommendations in the specifications.
+- add two more actions to the etsf_io tool: the content and the check actions.
+- fix some bugs in the buid system and in the low level part.
+	
 * Wed Jan 17 2007 Damien Caliste <damien.caliste@cea.fr> 0.7
 - add a new Fortran type to store the split definitions (e.g. my_kpoints...). This
   structure can be used when defining the variables on initialisation to set the
